fix visibility on quick-task-editor, add className and styles for cardMenu

--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,10 @@ button {
 .right-navbar {
   display: flex;
 }
-
+.nav-wrap {
+  position: relative;
+  z-index: 0;
+}
 .right-navbar .left-navbar .navbar-btn {
   background-color: hsla(0, 0%, 100%, 0.2);
   font-size: 20px;
@@ -1714,4 +1717,15 @@ button {
   width: 232px;
   height: 54px;
   display: block;
+}
+.card-menu-popup {
+  width: 304px;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25),
+    0 0 0 1px rgba(9, 30, 66, 0.08);
+  position: fixed;
+  margin-left: 224px;
+  margin-top: 32px;
+  z-index: 70;
 }
